# beast-json

./: .gitignore  API_READINESS_REPORT.md  CMakeLists.txt  GITHUB_PAGE_TODO.md  OPTIMIZATION_FAILURES.md  OPTIMIZATION_PLAN.md  PHASE31_35_PLAN.md  README.md  TODO.md  beast_json.hpp  debug_diff.cpp  test_neon_compile.cpp
.github/workflows/: ci.yml  codeql.yml
benchmarks/: CMakeLists.txt  RESULTS.md  bench_all.cpp  bench_complex_struct.cpp  bench_file_io.cpp  bench_glaze.cpp  bench_lazy_dom.cpp  bench_profiling.cpp  bench_quick.cpp  bench_simple_struct.cpp  utils.hpp
data/: test_simple.json  test_uint64.json
docs/: ROADMAP.md  TECHNICAL_REFERENCE.md  TODO.md
fuzz/: CMakeLists.txt  fuzz_lazy.cpp  fuzz_parse.cpp  fuzz_tape.cpp
fuzz/corpus/: edge_numbers  mixed  nested_array  unicode_string
include/beast_json/: beast_json.hpp
scripts/: profile.sh  profile_runner.py  run_benchmarks.py
tests/: CMakeLists.txt  cmp_benchmark.cpp  download_deps.sh  small.json  test_bitmap  test_bitmap.cpp  test_bitmap_offsets  test_bitmap_offsets.cpp  test_chrono_bitset.cpp  test_comments.cpp  test_control_char.cpp  test_depth.cpp  test_diagnostics.cpp  test_duplicate_keys.cpp  test_errors.cpp  test_flat_loop.cpp  test_fluent.cpp  test_iterators.cpp  test_json_patch.cpp  test_json_pointer.cpp  test_lazy_roundtrip.cpp  test_lazy_types.cpp  test_merge_patch.cpp  test_parallel_debug.cpp  test_quote_mask.cpp  test_reflection.cpp  test_relaxed.cpp  test_serializer.cpp  test_simple_debug.cpp  test_stl_exhaustive.cpp  test_stl_extended.cpp  test_strict_number.cpp  test_string_structure.cpp  test_struct_stress.cpp  test_tape_features.cpp  test_trailing_commas.cpp  test_unicode.cpp  test_utf8_validation.cpp  test_value_accessors.cpp
tools/: amalgamate.py
